# ZDDD

./: .gitignore  ARCHITECTURE_DECISIONS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_GUIDELINES.md  EXECUTION_STATE.md  LICENSE  MEMORY.md  PROJECT_DOCUMENT.md  PROJECT_RULES.md  README.md  RESEARCH_REFERENCE.md  pyproject.toml  requirements-dev.txt  requirements.txt  structure.txt
.github/workflows/: build.yml  lint.yml  tests.yml
config/: alerts.yaml  dashboard.yaml  features.yaml  logging.yaml  models.yaml  paths.yaml  settings.yaml  thresholds.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/monitoring/: prometheus.yml
deployment/systemd/: detection-engine.service
diagrams/: 01_system_architecture.drawio  02_ml_pipeline.drawio  03_detection_engine.drawio  04_data_flow.drawio  05_deployment_architecture.drawio
docs/: dissertation_chapters_3_4.md
docs/api/: alert_api.md  dashboard_api.md
docs/project/: scope.md  (+3 more)
models/: isolation_forest_metadata.joblib  random_forest_metadata.joblib
notebooks/: 01_dataset_exploration.ipynb  02_cleaning_analysis.ipynb  03_feature_engineering.ipynb  04_isolation_forest_training.ipynb  05_random_forest_training.ipynb  06_threshold_optimization.ipynb  07_pipeline_validation.ipynb  08_evaluation.ipynb  09_visualization.ipynb
scripts/: demo.py  download_dataset.py  evaluate_models.py  generate_report.py  optimize_thresholds.py  preprocess_data.py  run_backtest.py  run_dashboard.py  run_simulation.py  run_tests.py  train_iforest.py  train_random_forest.py
src/: __init__.py
tests/: conftest.py
(+124 files in other folders)
